--- a/.env.optimization
+++ b/.env.optimization
@@ -1,21 +1,17 @@
 # Optimizaciones adicionales para producción
 # Estas configuraciones ayudan a reducir la latencia con BD remota
 
-# Cache de conexiones
-MYSQL_CACHE_ENABLED=true
-
-# Timeout optimizados para BD remota
-MYSQL_CONNECT_TIMEOUT=5000
-MYSQL_ACQUIRE_TIMEOUT=10000
-MYSQL_QUERY_TIMEOUT=8000
-
 # Pool optimizado para latencia
-MYSQL_CONNECTION_LIMIT=20
-MYSQL_IDLE_TIMEOUT=300000
-
-# Compresión para reducir transferencia de datos
-MYSQL_COMPRESSION=true
+MYSQL_CONNECTION_LIMIT=15
 
 # Configuración de logs
 LOG_LEVEL=error
 DISABLE_LOGIN_LOGS=true
+
+# Nota: Las siguientes opciones no son compatibles con mysql2 y generan warnings:
+# - MYSQL_CONNECT_TIMEOUT
+# - MYSQL_ACQUIRE_TIMEOUT
+# - MYSQL_QUERY_TIMEOUT
+# - MYSQL_IDLE_TIMEOUT
+# - MYSQL_COMPRESSION
+# - MYSQL_CACHE_ENABLED
