Corregir configuración de conexión MySQL para Render

--- a/.env.render
+++ b/.env.render
@@ -4,11 +4,12 @@ PORT=10000
 
 # Configuración de base de datos
 # Estas variables deben configurarse en el dashboard de Render
-# DB_HOST=
+# IMPORTANTE: NO usar 'localhost' o '127.0.0.1' como DB_HOST en Render
+# DB_HOST=tu-servidor-mysql.com
 # DB_PORT=3306
-# DB_USER=
-# DB_PASSWORD=
-# DB_NAME=
+# DB_USER=tu_usuario
+# DB_PASSWORD=tu_contraseña
+# DB_NAME=tu_base_de_datos
 
 # Configuración de JWT
 # JWT_SECRET debe configurarse en el dashboard de Render
