--- a/render.yaml
+++ b/render.yaml
@@ -10,10 +10,13 @@ services:
         value: production
       - key: PORT
         value: 10000
+      # IMPORTANTE: Configura estas variables en el dashboard de Render
+      # NO uses 'localhost' o '127.0.0.1' como DB_HOST
       - key: DB_HOST
         sync: false
       - key: DB_PORT
         sync: false
+        value: 3306
       - key: DB_USER
         sync: false
       - key: DB_PASSWORD
