Actualizar configuración para MySQL en Alwaysdata

--- a/.env.render
+++ b/.env.render
@@ -5,11 +5,12 @@ PORT=10000
 # Configuración de base de datos
 # Estas variables deben configurarse en el dashboard de Render
 # IMPORTANTE: NO usar 'localhost' o '127.0.0.1' como DB_HOST en Render
-# DB_HOST=tu-servidor-mysql.com
+# Ejemplo para Alwaysdata:
+# DB_HOST=mysql-brayamsacasistencia.alwaysdata.net
 # DB_PORT=3306
-# DB_USER=tu_usuario
-# DB_PASSWORD=tu_contraseña
-# DB_NAME=tu_base_de_datos
+# DB_USER=417526_brayamsac
+# DB_PASSWORD=tu_contraseña_de_alwaysdata
+# DB_NAME=brayamsacasistencia_control_asistencias
 
 # Configuración de JWT
 # JWT_SECRET debe configurarse en el dashboard de Render
