feat: Configuración AWS y CloudFront - Actualizado CORS para CloudFront, agregados archivos Docker y scripts de despliegue AWS

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 # CONFIGURACIÓN DE SEGURIDAD - BACKEND
 # ===================================
 
-# Base de datos
-DB_HOST=localhost
+# Base de datos - AWS RDS
+DB_HOST=brayamsac-bd-asistencias.cd6ygkkwiLu7.sa-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_USER=tu_usuario
-DB_PASSWORD=tu_contraseña_super_segura
-DB_NAME=asistencia_db
+DB_USER=admin
+DB_PASSWORD=?i#7x1883tU-TNczy!o!Ss
+DB_NAME=brayamsac-bd-asistencias
 
 # JWT (CAMBIAR EN PRODUCCIÓN)
 JWT_SECRET=tu_jwt_secret_muy_seguro_de_al_menos_256_bits
