--- a/.env.production.example
+++ b/.env.production.example
@@ -5,10 +5,10 @@
 NODE_ENV=production
 
 # 🗄️ BASE DE DATOS AWS RDS
-DB_HOST=your-rds-endpoint.us-east-1.rds.amazonaws.com
+DB_HOST=brayamsac-bd-asistencias.cd6ygkkwiLu7.sa-east-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASSWORD=your_super_secure_password_here
-DB_NAME=asistencias_brayamsac
+DB_PASSWORD=?i#7x1883tU-TNczy!o!Ss
+DB_NAME=brayamsac-bd-asistencias
 DB_PORT=3306
 DB_SSL=true
 
@@ -35,7 +35,7 @@ LOG_FILE=combined.log
 ERROR_LOG_FILE=error.log
 
 # ☁️ AWS CONFIGURACIÓN
-AWS_REGION=us-east-1
+AWS_REGION=sa-east-1
 AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 
