--- a/.env.render
+++ b/.env.render
@@ -2,15 +2,14 @@
 NODE_ENV=production
 PORT=10000
 
-# Configuración de base de datos
+# Configuración de base de datos AWS RDS
 # Estas variables deben configurarse en el dashboard de Render
 # IMPORTANTE: NO usar 'localhost' o '127.0.0.1' como DB_HOST en Render
-# Ejemplo para Alwaysdata:
-# DB_HOST=mysql-brayamsacasistencia.alwaysdata.net
-# DB_PORT=3306
-# DB_USER=417526_brayamsac
-# DB_PASSWORD=tu_contraseña_de_alwaysdata
-# DB_NAME=brayamsacasistencia_control_asistencias
+DB_HOST=brayamsac-bd-asistencias.cd6ygkkwiLu7.sa-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_USER=admin
+DB_PASSWORD=?i#7x1883tU-TNczy!o!Ss
+DB_NAME=brayamsac-bd-asistencias
 
 # Configuración de JWT
 # JWT_SECRET debe configurarse en el dashboard de Render
