--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "start": "cross-env NODE_ENV=production node src/index.js",
+    "dev": "NODE_ENV=development nodemon src/index.js",
+    "start": "NODE_ENV=production node src/index.js",
+    "start:aws": "NODE_ENV=production PORT=80 node src/index.js",
+    "start:pm2": "pm2 start ecosystem.config.js",
     "test": "echo 'Ejecutando tests de integración...' && node tests/integration/test-login-real.js",
     "test:integration": "echo 'Tests de integración disponibles en tests/integration/'",
     "test:unit": "echo 'Tests unitarios en desarrollo - carpeta tests/unit/'",
     "db:check": "node scripts/database/check-users.js",
     "db:analyze": "node scripts/database/analyze-database.js",
     "db:encrypt": "node scripts/database/encrypt-passwords.js",
+    "db:test-aws": "node scripts/test-aws-rds-connection.js",
+    "health": "node scripts/health-check.js",
+    "deploy:aws": "bash scripts/deploy-aws.sh",
     "security:audit": "node scripts/database/security-audit.js",
     "security:check": "npm audit",
     "security:fix": "npm audit fix",
