--- a/.env.production.example
+++ b/.env.production.example
@@ -1,54 +1,32 @@
-# 🔒 VARIABLES DE ENTORNO PARA PRODUCCIÓN AWS
-# Copiar este archivo como .env y configurar con valores reales
+# ===================================
+# 🚀 CONFIGURACIÓN DE PRODUCCIÓN AWS
+# ===================================
 
-# 🌍 ENTORNO
+# 🌍 Configuración del entorno
 NODE_ENV=production
+PORT=10000
 
-# 🗄️ BASE DE DATOS AWS RDS
-DB_HOST=brayamsac-bd-asistencias.cd6ygkkwiLu7.sa-east-1.rds.amazonaws.com
-DB_USER=admin
-DB_PASSWORD=?i#7x1883tU-TNczy!o!Ss
-DB_NAME=brayamsac-bd-asistencias
+# 🗄️ Base de datos AWS RDS
+DB_HOST=your-rds-endpoint.region.rds.amazonaws.com
 DB_PORT=3306
+DB_USER=admin
+DB_PASSWORD=your-secure-password
+DB_NAME=brayamsac_bd_asistencias
 DB_SSL=true
 
-# 🔐 AUTENTICACIÓN JWT
-JWT_SECRET=your_super_secure_jwt_secret_at_least_256_characters_long_for_production_security
+# 🔐 JWT Configuration
+JWT_SECRET=your-super-secure-jwt-secret-for-production
 JWT_EXPIRES_IN=8h
 
-# 🌐 URLS
-FRONTEND_URL=https://your-frontend-domain.com
-API_URL=https://api.your-domain.com
+# 🌐 Frontend URL (CloudFront)
+FRONTEND_URL=https://your-cloudfront-distribution.cloudfront.net
 
-# 📧 EMAIL CONFIGURACIÓN
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# ⚡ Optimizaciones MySQL
+MYSQL_CONNECTION_LIMIT=10
 
-# 🚦 CORS CONFIGURACIÓN
-CORS_ORIGIN=https://your-frontend-domain.com
+# 📝 Configuración de logs
+LOG_LEVEL=error
+DISABLE_LOGIN_LOGS=true
 
-# 📊 LOGGING
-LOG_LEVEL=info
-LOG_FILE=combined.log
-ERROR_LOG_FILE=error.log
-
-# ☁️ AWS CONFIGURACIÓN
-AWS_REGION=sa-east-1
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-
-# 🔢 PUERTOS
-PORT=3000
-
-# 🛡️ SEGURIDAD
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-LOGIN_RATE_LIMIT_MAX=5
-
-# 📝 NOTAS IMPORTANTES:
-# 1. NUNCA subir este archivo a git con valores reales
-# 2. JWT_SECRET debe tener al menos 256 caracteres
-# 3. DB_SSL=true es obligatorio para RDS en producción
-# 4. Cambiar todas las contraseñas por valores seguros
+# 🔒 Configuración de seguridad
+CORS_ORIGIN=https://your-cloudfront-distribution.cloudfront.net
