Disable rate limiting and increase system limits - Remove Express.js rate limiting middleware - Increase JSON body limit to 100MB - Remove MySQL connection limits - Disable Nginx rate limiting

--- a/deployment-ec2/config/.env.production.example
+++ b/deployment-ec2/config/.env.production.example
@@ -27,8 +27,8 @@ JWT_REFRESH_EXPIRES_IN=7d
 # ===========================================
 # FRONTEND Y CORS
 # ===========================================
-FRONTEND_URL=https://tu-cloudfront-domain.cloudfront.net
-CORS_ORIGIN=https://tu-cloudfront-domain.cloudfront.net
+FRONTEND_URL=http://brayamsac-asistencias.s3-website-sa-east-1.amazonaws.com
+CORS_ORIGIN=http://brayamsac-asistencias.s3-website-sa-east-1.amazonaws.com
 
 # ===========================================
 # AWS CONFIGURACIÓN
