--- a/deployment-ec2/nginx/brayamsac-backend.conf
+++ b/deployment-ec2/nginx/brayamsac-backend.conf
@@ -1,10 +1,10 @@
 # Configuración de Nginx para Brayamsac Backend en AWS EC2
 # Reverse proxy con SSL, compresión y optimizaciones de seguridad
 
-# Rate limiting zones
-limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
-limit_req_zone $binary_remote_addr zone=health:10m rate=30r/s;
+# Rate limiting DESHABILITADO - Sin limitaciones
+# limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+# limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
+# limit_req_zone $binary_remote_addr zone=health:10m rate=30r/s;
 
 # Upstream configuration para load balancing
 upstream brayamsac_backend {
@@ -98,9 +98,9 @@ server {
     proxy_buffers 8 4k;
     proxy_busy_buffers_size 8k;
     
-    # Health check endpoints (sin rate limiting para ALB)
+    # Health check endpoints (sin rate limiting)
     location ~ ^/health(/(simple|ready|live))?$ {
-        limit_req zone=health burst=50 nodelay;
+        # limit_req zone=health burst=50 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -110,9 +110,9 @@ server {
         access_log off;
     }
     
-    # API Authentication endpoints (rate limiting más estricto)
+    # API Authentication endpoints (sin rate limiting)
     location ~ ^/api/(auth|login|register) {
-        limit_req zone=auth burst=10 nodelay;
+        # limit_req zone=auth burst=10 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -138,9 +138,9 @@ server {
         }
     }
     
-    # API endpoints generales
+    # API endpoints generales (sin rate limiting)
     location /api/ {
-        limit_req zone=api burst=20 nodelay;
+        # limit_req zone=api burst=20 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
