--- a/nginx/brayamsac-backend.conf
+++ b/nginx/brayamsac-backend.conf
@@ -1,10 +1,10 @@
 # Configuración de Nginx para Brayamsac Backend en AWS EC2
 # Reverse proxy con SSL, compresión y optimizaciones de seguridad
 
-# Rate limiting zones
-limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
-limit_req_zone $binary_remote_addr zone=health:10m rate=30r/s;
+# Rate limiting DESHABILITADO - Sin limitaciones
+# limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+# limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
+# limit_req_zone $binary_remote_addr zone=health:10m rate=30r/s;
 
 # Upstream configuration para load balancing
 upstream brayamsac_backend {
@@ -100,7 +100,7 @@ server {
     
     # Health check endpoints (sin rate limiting para ALB)
     location ~ ^/health(/(simple|ready|live))?$ {
-        limit_req zone=health burst=50 nodelay;
+        # limit_req zone=health burst=50 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -112,7 +112,7 @@ server {
     
     # API Authentication endpoints (rate limiting más estricto)
     location ~ ^/api/(auth|login|register) {
-        limit_req zone=auth burst=10 nodelay;
+        # limit_req zone=auth burst=10 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -140,7 +140,7 @@ server {
     
     # API endpoints generales
     location /api/ {
-        limit_req zone=api burst=20 nodelay;
+        # limit_req zone=api burst=20 nodelay; # DESHABILITADO
         proxy_pass http://brayamsac_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
